--- a/Bootstrap-template-Gp/assets/css/style.css
+++ b/Bootstrap-template-Gp/assets/css/style.css
@@ -123,6 +123,7 @@ h6 {
   transition: all 0.5s;
   z-index: 997;
   padding: 15px 0;
+  background: rgba(0, 0, 0, 0.8);
 }
 
 #header.header-scrolled,
@@ -138,18 +139,21 @@ h6 {
   font-weight: 700;
   letter-spacing: 2px;
   text-transform: uppercase;
+  
 }
 
-#header .logo a {
+/* #header .logo a {
   color: #fff;
-}
+} */
 
+/*
 #header .logo a span {
-  color: #ffc451;
-}
+  color: #fff;
+  font-size: 60px;
+} */
 
 #header .logo img {
-  max-height: 40px;
+  max-height: 60px;
 }
 
 /*--------------------------------------------------------------
@@ -208,7 +212,7 @@ h6 {
   padding: 10px 0 10px 30px;
   font-size: 15px;
   font-weight: 600;
-  color: #fff;
+  color: #ffbb38;
   white-space: nowrap;
   transition: 0.3s;
 }
@@ -406,7 +410,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
+  background: url("../img/hero-img.png") top center;
   background-size: cover;
   position: relative;
 }
@@ -508,7 +512,7 @@ h6 {
 # Sections General
 --------------------------------------------------------------*/
 section {
-  padding: 60px 0;
+  padding: 160px 0px 60px 0px;
   overflow: hidden;
 }
 
@@ -517,7 +521,7 @@ section {
 }
 
 .section-title h2 {
-  font-size: 14px;
+  font-size: 20px;
   font-weight: 500;
   padding: 0;
   line-height: 1px;
@@ -1537,6 +1541,10 @@ section {
 
 #footer .footer-top .footer-newsletter form input[type=submit]:hover {
   background: #ffcd6b;
+}
+
+#footer .logo img {
+  max-height: 100px;
 }
 
 #footer .copyright {
