--- a/Bootstrap-template-Gp/assets/css/style.css
+++ b/Bootstrap-template-Gp/assets/css/style.css
@@ -132,7 +132,7 @@ h6 {
 }
 
 #header .logo {
-  font-size: 32px;
+  font-size: 50px;
   margin: 0;
   padding: 0;
   line-height: 1;
@@ -153,7 +153,7 @@ h6 {
 } */
 
 #header .logo img {
-  max-height: 60px;
+  max-height: 90px;
 }
 
 /*--------------------------------------------------------------
@@ -1201,7 +1201,7 @@ section {
 --------------------------------------------------------------*/
 .team {
   background: #fff;
-  padding: 60px 0;
+  padding: 160px 0px 60px 0px;
 }
 
 .team .member {
