--- a/Bootstrap-template-Gp/assets/css/style.css
+++ b/Bootstrap-template-Gp/assets/css/style.css
@@ -617,11 +617,20 @@ section {
   background-color: #ffc451;
 }
 
+.clients h3{
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
 /*--------------------------------------------------------------
 # Features
 --------------------------------------------------------------*/
 .features {
   padding-top: 20px;
+}
+
+.features h3{
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .features .icon-box {
